--- a/content/posts/pt03.md
+++ b/content/posts/pt03.md
@@ -3,7 +3,7 @@ title: "Polar Twin - PT03"
 date: 2017-08-06
 image: img/pt03.png
 collaborations: ["collaboration", "composition", "visuals"]
-draft: true
+draft: false
 ---
 PT03 is a short split single.
 <div class = "video-container"><iframe src="https://www.youtube-nocookie.com/embed/ekIWHt4Jssw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
