--- a/content/posts/pt03.md
+++ b/content/posts/pt03.md
@@ -6,6 +6,6 @@ collaborations: ["collaboration", "composition", "visuals"]
 draft: false
 ---
 PT03 is a short split single.
-<div class = "video-container"><iframe src="https://www.youtube-nocookie.com/embed/ekIWHt4Jssw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-<div class = "video-container"><iframe src="https://www.youtube-nocookie.com/embed/wb273n4WFos?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class = "video-container no-float"><iframe src="https://www.youtube-nocookie.com/embed/ekIWHt4Jssw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class = "video-container no-float"><iframe src="https://www.youtube-nocookie.com/embed/wb273n4WFos?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1724570028/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://polartwin.bandcamp.com/album/soup-cool-water">soup : cool water by POLAR TWIN</a></iframe>
